jerbil-0.0.4 16-Apr-2011

Minor changes to init scripts and correct spelling mistake on daemonize

jerbil-0.0.3a 16-Apr-2011

Initial release for system level testing only.


jerbil-0.0.2 1-Apr-2011

Made a few insignificant changes today
and that is all

jerbil-0.0.1 1-Apr-2011

Initial create, but never tagged!