@@ -1,9 +1,9 @@
 # Created by Jevoom
 #
 # 16-Apr-2011
-#   Initial release for system level testing only.
+#   Fixed mess up in sbin/jerbild to get real local host server record
 
 class Jerbil
-  Version = '0.0.3a'
+  Version = '0.0.5'
   Version_Date = '16-Apr-2011'
 end
