@@ -1,3 +1,7 @@
+jerbil-0.0.5 16-Apr-2011
+
+Fixed mess up in sbin/jerbild to get real local host server record
+
 jerbil-0.0.4 16-Apr-2011
 
 Minor changes to init scripts and correct spelling mistake on daemonize
